# fastapi-employee-record

./: .env  .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json  test.env
.github/workflows/: poetry-pytest-test.yml
fastapi_demo/: app.py
fastapi_demo/data/: designation.py  employee.py
fastapi_demo/db/: db_session.py
fastapi_demo/models/: designation.py  employee.py
fastapi_demo/routes/: designation.py  employee.py  frontend.py
fastapi_demo/utils/: utility.py
migrations/: env.py
migrations/versions/: 000ba1a8058d_added_department_model.py  048d2c788c9f_added_department_model.py  506424da544b_renamed_to.py  5eb8f0db6eca_added_employee_table.py  92781495efc6_restructured_employee_model_information.py  a42c3248e2f0_added_foreign_key_field_nullable_and_.py  a8fbd8e5fee6_added_relationship.py  cb6c85f3ab13_employee_created.py  dcfdd5c56c63_employee_created.py
static/css/: style.css
static/js/: main.js
tailwinds/: package-lock.json  package.json  tailwind.config.js
templates/: about.html  base.html  contact.html  designation.html  footer.html  header.html  index.html  privacy_policy.html
tests/: test_designation_routes.py  test_employee_data.py  test_employee_model.py  test_employee_routes.py
